--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Blaka&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <script src="app.js" defer></script>
     <title>Flames</title>
 </head>
@@ -34,7 +32,7 @@
                 <input type="text" id="input2" placeholder="Second Match Name">
                 <button type="submit">Match</button>
             </div>
-            <div class="answer remove" >
+            <div class="answer remove">
                 <img src="./close.png" class="pic1" alt="">
                 <img src="" class="pic" alt="">
                 <p class="message "></p>
